<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">

    <item android:title="@string/main_menu_item1" android:id="@+id/mainMenuHome"/>
    <item android:title="@string/main_menu_item2" android:id="@+id/mainMenuAllVehicle"/>
    <item android:title="@string/main_menu_item3" android:id="@+id/mainMenuVehicleNotSold"/>
    <item android:title="@string/main_menu_item4" android:id="@+id/mainMenuSoldVehicle"/>
    <item android:title="@string/main_menu_item5" android:id="@+id/mainMenuVehicleSpecifications"/>
    <item android:title="@string/main_menu_item6" android:id="@+id/mainMenuCompanyDetails"/>
    <item android:title="@string/main_menu_item7" android:id="@+id/mainMenuCompanyDetailsModifications"/>
    <item android:title="@string/main_menu_item8" android:id="@+id/mainMenuAddVehicle"/>
    <item android:title="@string/main_menu_item9" android:id="@+id/mainMenuVehicleModification"/>
</menu>