<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="._8_VehicleModificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/addVehicleModificationTitleTextView"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_title"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginLeft="80dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_make"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/editVehicleMakeTextView"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="60dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_model"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="10dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/editVehicleModelTextView"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="110dp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_condition"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="10dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/editVehicleConditionTextView"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="160dp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_engine"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="210dp"
            android:layout_marginLeft="10dp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/editVehicleEngineTextView"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="210dp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_year"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="260dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/editVehicleYearTextView"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="260dp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_number_of_doors"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="310dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/editVehicleNumberOfDoorsTextView"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="310dp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_price"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="360dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editVehiclePriceTextView"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:inputType="number"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="360dp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_color"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="410dp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/editVehicleColorTextView"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="410dp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/addVehicleImageTextView"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_image"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="460dp"
            tools:ignore="MissingConstraints"/>

        <ImageView
            android:id="@+id/editUploadedImage"
            android:layout_marginTop="460dp"
            android:layout_marginLeft="190dp"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:text="Vehicle Image"
            android:textSize="23sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/vehicle_modification_sold_date"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="570dp"
            tools:ignore="MissingConstraints"/>

        <EditText
            android:id="@+id/editVehicleSoldDateTextView"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="570dp"
            tools:ignore="MissingConstraints"/>


        <Button
            android:id="@+id/editVehicleButton"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="640dp"
            android:text="@string/vehicle_modification_save_button"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>