<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="._6_ComanyDetailModificationActivity">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/companyDatailsModificationAddress"
            android:layout_width="88dp"
            android:layout_height="40dp"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="20dp"
            android:text="@string/company_details_modification_address"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="89dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="196dp"
            android:text="@string/company_details_modification_name"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <EditText
            android:layout_marginLeft="140dp"
            android:layout_marginTop="190dp"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:id="@+id/comanyModificationName"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/textCompanyDetailsModificationAddressLine1"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="280dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/textCompanyDetailsModificationAddressLine2"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="335dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/textCompanyDetailsModificationAddressLine3"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="385dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="89dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="440dp"
            android:text="@string/company_details_modification_image"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:text="@string/company_details_modification_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comanyDetailsModificationImageButton"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="440dp"/>

        <Button
            android:text="@string/company_details_modification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comanyDetailsModificationSubmitButton"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="550dp"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
